...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias='0.0'
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/top_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Album Name Album Name Al bu m Na me"
                android:textColor="@color/text"
                android:textSize="18sp"
                app:layout_constraintHorizontal_bias='0.0'
...
