<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    android:label="@string/top_albums_fragment_title"
    app:startDestination="@id/topAlbumsFragment">

    <fragment
        android:id="@+id/topAlbumsFragment"
        android:name="com.music.topalbums.ui.topalbums.TopAlbumsFragment"
        android:label="@string/top_albums_fragment_title">
        <action
            android:id="@+id/action_topAlbumsFragment_to_songsFragment"
            app:destination="@id/songsFragment" />
    </fragment>
    <fragment
        android:id="@+id/songsFragment"
        android:name="com.music.topalbums.ui.songs.SongsFragment"
        android:label="@string/songs_fragment_title">
        <action
            android:id="@+id/action_songsFragment_to_artistAlbumsFragment"
            app:destination="@id/artistAlbumsFragment"
            app:popUpTo="@id/topAlbumsFragment" />
    </fragment>
    <fragment
        android:id="@+id/artistAlbumsFragment"
        android:name="com.music.topalbums.ui.artistalbums.ArtistAlbumsFragment"
        android:label="@string/artist_albums_fragment_title">
        <action
            android:id="@+id/action_artistAlbumsFragment_to_songsFragment"
            app:destination="@id/songsFragment" />
    </fragment>
</navigation>